# uv_constraints-txt-direct-dep

./: .whitesource  README.md  autotest_config.json  expected-tree.json  pyproject.toml  whitesource.config
